[tool.poetry]
name = "lesson-19-1"
version = "0.1.0"
description = ""
authors = ["glebokhlopkov <glebka_90@mail.ru>"]
readme = "README.md"
packages = [{include = "lesson_19"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
